--- a/Tamagotchi/index.html
+++ b/Tamagotchi/index.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <title>Bobbygotschi</title>
-    <script type="module" src="p5.min.js"></script>
-    <script type="module" src="p5setup.js"></script>
+    <script src="p5.min.js"></script>
+    <script src="p5setup.js"></script>
+    <script src="gsap.min.js"></script>
     <script type="module" src="sketch.js"></script>
+
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body></body>
